# Medimind

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  start_servers.bat
backend/: __init__.py  agent.py  auth.py  db.py  email_service.py  google_auth.py  main.py  mem0_config.py  mem0_feedback_config.py  models.py  pinecone_helper.py  rag.py
backend/db/: supabase_auth_migration.sql  supabase_setup.sql
frontend/: components.json  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/ui/: avatar.jsx  button.jsx  card.jsx  input.jsx  scroll-area.jsx  tooltip.jsx
frontend/src/lib/: useTheme.js
frontend/src/pages/: Auth.jsx  Chat.jsx
scripts/: index_kb.py
test_data/qdrant/: meta.json
